:lipstick: fixing background image on mobile device

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,7 +3,16 @@ body,
 .view {
     height: 100%;
 }
-
+.full-bg-img {
+    position: absolute;
+}
+.full-bg-img, .view .content, .view .mask {
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
 .view {
     background: url("https://images.unsplash.com/photo-1481679115566-7aeae7543b52?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=")no-repeat center center fixed;
     -webkit-background-size: cover;
